--- a/app/src/main/res/layout/joblist_item.xml
+++ b/app/src/main/res/layout/joblist_item.xml
@@ -1,13 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="6dp">
 
-    <TextView
-        android:id="@+id/word"
-        style="@style/job_title" />
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="8dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="0dp"
+        app:strokeColor="#f1f1f1"
+        app:strokeWidth="1dp">
+
+        <LinearLayout
+            android:id="@+id/linearLayoutItem"
+            android:orientation="vertical"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="?attr/selectableItemBackground"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="9dp"
+                android:padding="4dp" >
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/photoPreviewLayout"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="6dp"
+                    android:src="@drawable/ic_photo"
+                    app:strokeWidth="0.5dp"
+                    app:strokeColor="#f1f1f1"
+                    app:cardElevation="0dp"
+                    app:cardCornerRadius="8dp">
+                    <ImageView
+                        android:id="@+id/photoPreview"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerInside"
+                        android:layout_margin="5dp"
+                        android:src="@drawable/ic_job_image" />
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <LinearLayout
+                    android:layout_toEndOf="@id/photoPreviewLayout"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/title"
+                        android:ellipsize="end"
+                        android:maxLines="2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:text="@string/student_union_food_delivery"
+                        android:textColor="@color/gray_500"
+                        android:textSize="18sp"
+                        android:layout_marginBottom="3dp"
+                        android:fontFamily="@font/bold"/>
+                    <RelativeLayout
+                        android:layout_marginStart="14dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:id="@+id/lampIcon"
+                            android:src="@drawable/ic_round_business_24"
+                            app:tint="@color/gray_300"
+                            android:layout_marginEnd="5dp"
+                            android:layout_width="15dp"
+                            android:layout_height="16sp"/>
+                        <TextView
+                            android:layout_toEndOf="@id/lampIcon"
+                            android:id="@+id/description"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/gray_400"
+                            android:text="Northern Kentucky University"
+                            android:textSize="12sp"
+                            android:singleLine="true"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/book"/>
+                    </RelativeLayout>
+                    <RelativeLayout
+                        android:layout_marginStart="14dp"
+                        android:layout_marginTop="3dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:id="@+id/locIcon"
+                            android:src="@drawable/ic_outline_location_on_24"
+                            app:tint="@color/gray_300"
+                            android:layout_marginEnd="5dp"
+                            android:layout_width="15dp"
+                            android:layout_height="16sp"/>
+                        <TextView
+                            android:layout_toEndOf="@id/locIcon"
+                            android:id="@+id/job_location"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/gray_400"
+                            android:text="Student Union Plaza"
+                            android:textSize="12sp"
+                            android:singleLine="true"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/book"/>
+                    </RelativeLayout>
+                    <RelativeLayout
+                        android:layout_marginStart="14dp"
+                        android:layout_marginTop="3dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/job_type"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="6dp"
+                            android:paddingStart="6dp"
+                            android:paddingEnd="6dp"
+                            android:paddingTop="2dp"
+                            android:paddingBottom="2dp"
+                            android:background="@drawable/bg_job_type"
+                            android:textColor="@color/blue_500"
+                            android:text="Part Time"
+                            android:textSize="10sp"
+                            android:fontFamily="@font/book"/>
+                        <TextView
+                            android:id="@+id/job_post_date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginTop="6dp"
+                            android:paddingStart="6dp"
+                            android:paddingEnd="6dp"
+                            android:paddingTop="2dp"
+                            android:paddingBottom="2dp"
+                            android:layout_alignParentEnd="true"
+                            android:textColor="@color/gray_300"
+                            android:text="Sun Oct 24, 2021"
+                            android:textSize="11sp"
+                            android:fontFamily="@font/book"/>
+                    </RelativeLayout>
+                </LinearLayout>
+            </RelativeLayout>
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 
 
 </LinearLayout>
+
+
+
+
+
