--- a/app/src/main/res/layout/joblist_item.xml
+++ b/app/src/main/res/layout/joblist_item.xml
@@ -59,7 +59,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:id="@+id/title"
+                        android:id="@+id/job_title"
                         android:ellipsize="end"
                         android:maxLines="2"
                         android:layout_width="match_parent"
@@ -83,7 +83,7 @@
                             android:layout_height="16sp"/>
                         <TextView
                             android:layout_toEndOf="@id/lampIcon"
-                            android:id="@+id/description"
+                            android:id="@+id/job_description"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/gray_400"
